<resources>
    <string name="app_name">UTS_00000039906</string>
    <string name="title_activity_library">library</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="moh_rizki_zidane">Moh. Rizki Zidane</string>
    <string name="if570_el">IF570 - EL</string>

    <string name="link1"><a href="https://www.androidrion.com">https://www.androidrion.com</a></string>
    <string name="link2"><a href="https://medium.com/">"https://medium.com/</a></string>
    <string name="link3"><a href="https://developer.android.com">https://developer.android.com</a></string>
    <string name="link4"><a href="https://www.caratutorial.com/">https://www.caratutorial.com/</a></string>
    <string name="link5"><a href="https://badoystudio.com/">https://badoystudio.com/</a></string>
    <string name="tampilanawal">TampilanAwal</string>
    <string name="tampilanprofil">TampilanProfil</string>
    <string name="library">Library</string>
    <string name="profile">Profile</string>

</resources>